add divs for branching answer paths

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
       <!-- Button -->
       <button type="submit" class="btn">Submit!</button>
     </form>
+
+    <div id="ruby">
+      <h1>Your language is Ruby!</h1>
+    </div>
+
+    <div id="javascript">
+      <h1>Your language is Javascript!</h1>
+    </div>
+
+    <div id="python">
+      <h1>Your language is Python!</h1>
+    </div>
   </div>  
 </body>
 </html>
