add values for form options

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="animal" value="boa constrictor">
+          <input type="radio" name="animal" value="boa">
           Boa Constrictor
         </label>
       </div>
@@ -57,7 +57,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="hat" value="snapback">
+          <input type="radio" name="hat" value="snap">
           Snapback
         </label>
       </div>
@@ -65,16 +65,16 @@
       <!-- Dropdowns -->
       <h3>How do you take your coffee?</h3>
       <select class="form-control" id="coffee">
-        <option>Black</option>
-        <option>With Cream</option>
-        <option>Sweet as Candy</option>
+        <option value="black">Black</option>
+        <option value="cream">With Cream</option>
+        <option value="sweet">Sweet as Candy</option>
       </select>
 
       <h3>What is your favorite fruit?</h3>
       <select class="form-control" id="beverage">
-        <option>Apple</option>
-        <option>Cherry</option>
-        <option>Tomato</option>
+        <option value="apple">Apple</option>
+        <option value="cherry">Cherry</option>
+        <option value="tomato">Tomato</option>
       </select>
 
       <!-- Button -->
