add first successful if/else logic for beanie check

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       
       <div class="radio">
         <label>
-          <input type="radio" name="hat" value="beanie">
+          <input id="beanie" type="radio" name="hat" value="beanie">
           Beanie
         </label>
       </div>
