add hat variable for jquery check

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="hat" value="fedora">
+          <input id="fedora" type="radio" name="hat" value="fedora">
           Fedora
         </label>
       </div>
