add ability to hide the form and show a result

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </select>
 
       <h3>What is your favorite fruit?</h3>
-      <select class="form-control" id="beverage">
+      <select class="form-control" id="fruit">
         <option value="apple">Apple</option>
         <option value="cherry">Cherry</option>
         <option value="tomato">Tomato</option>
