add feature to prepend input from name form to result

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
       <!-- Regular Form -->
       <div class="form-group">
-        <label for="age"><h3>What is your age?</h3></label>
-        <input id="age" class="form-control" type="text">
+        <label for="name"><h3>What is your name?</h3></label>
+        <input id="name" class="form-control" type="text">
       </div>
 
       <!-- Radio Buttons -->
@@ -82,15 +82,15 @@
     </form>
 
     <div id="ruby">
-      <h1>Your language is Ruby!</h1>
+      <h1 id="ruby-name">your language is Ruby!</h1>
     </div>
 
     <div id="javascript">
-      <h1>Your language is Javascript!</h1>
+      <h1>your language is Javascript!</h1>
     </div>
 
     <div id="python">
-      <h1>Your language is Python!</h1>
+      <h1>your language is Python!</h1>
     </div>
   </div>  
 </body>
