add id tags for result divs, plus logic for javscript results

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
     </div>
 
     <div id="javascript">
-      <h1>your language is Javascript!</h1>
+      <h1 id="java-name">your language is Javascript!</h1>
     </div>
 
     <div id="python">
-      <h1>your language is Python!</h1>
+      <h1 id="python-name">your language is Python!</h1>
     </div>
   </div>  
 </body>
