add logo for javascript result

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         </div>
     
         <div class="result" id="javascript">
+          <img src="img/javascript.png" alt="javascript">
           <h1 id="java-name">your language is Javascript!</h1>
         </div>
     
