add formatting for mobile

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <h1 id="python-name">your language is Python!</h1>
         </div>
       </div> 
+      <div class="col-md-3"></div>
     </div>
   </div> 
 </body>
