add additional tweaks to mobile formatting

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <h2 id="jumbo">Which programming language are you?</h2>
     </div>
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
+      <div class="col-sm-3"></div>
+      <div class="col-sm-6">
         <form id="language">
   
           <!-- Regular Form -->
@@ -100,7 +100,7 @@
           <h1 id="python-name">your language is Python!</h1>
         </div>
       </div> 
-      <div class="col-md-3"></div>
+      <div class="col-sm-3"></div>
     </div>
   </div> 
 </body>
