add small changes to clean up look of code and organize

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
           <button type="submit" class="btn">Submit!</button>
         </form>
     
+        <!-- Results -->
         <div class="result" id="ruby">
           <img src="img/ruby.png" alt="ruby"> 
           <h1 id="ruby-name">your language is Ruby!</h1>
